...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGymBuddy"
        app:layout_constraintVertical_bias="0.033"
        app:srcCompat="@drawable/pullups_64px" />

    <Button
        android:id="@+id/btnInvisible"
        android:layout_width="387dp"
        android:layout_height="562dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginTop="8dp"
        android:alpha="0.0"
        android:background="#70FF0000"
        android:text="Invisible button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />
...
